# xyra

./: .gitignore  .gitmodules  .markdownlint.yml  LICENSE  MANIFEST.in  OPENCODE.md  README.md  bench.py  bench_quote.py  benchmark_swagger_full.py  changelog.md  fix_plan.md  main.py  patch.diff  patch.py  patch_add_handler.diff  patch_loop.diff  patch_request_py.py  patch_tests.py  pyproject.toml  reproduce_multi_cookie.py  reproduce_uaf.py  review.txt  run_benchmark.py  setup.py  test.py  test_async_safety.py  test_bindings.py  test_concept  test_concept.cpp  test_cookie.py  test_defer  test_defer.cpp  test_defer2  test_defer2.cpp  test_erase_current  test_erase_current.cpp  test_erase_current_flags  test_erase_current_flags.cpp  test_fast.py  (+53 more)
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  sentinel-journal.md
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  labeler.yml  publish.yml  release.yml
.jules/: bolt.md  sentinel.md
benchmark/: README.md  app_fastapi.py  app_flask.py  app_go_gin.go  app_go_native.go  app_robyn.py  app_socketify.py  app_xyra.py  baseline.py  benchmark_report.md  benchmark_report_pypy.md  chart_generator.py  chart_generator_old.py  client.py  comparison_report.txt  go.mod  go.sum  performance_report.txt  requirements.txt  run_benchmark.py  run_benchmarks.py  run_complete_benchmark.py  run_pypy_benchmarks.py  server.py
benchmark/result/: baseline_report.md  complete_benchmark_results.json  performance_baseline.json  performance_report.txt
benchmark/templates/: test.html
docs/: README.html  README.md  _config.yml  api-reference.html  api-reference.md  background-tasks.html  concurrency.html  examples.html  examples.md  getting-started.html  getting-started.md  index.html  installation.html  installation.md  logger.html  logger.md  middleware.html  middleware.md  request-response.html  request-response.md  routing.html  routing.md  static-files.html  static-files.md  swagger.html  swagger.md  templating.html  templating.md  test_sidebar.html  websocket.html  websocket.md  websockets.html
docs/_layout/: default.html
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/assets/js/: script.js  script.min.js
example/: README.md  app.py  decorator_test.py  simple-api.md  simple_app.py  templating.py  ws.py
example/static/: indra.js
example/templates/: home.html
scripts/: smart_test.py
tests/: conftest.py  repro_xss_send.py  reproduce_uaf_script.py  reproduce_websocket_uaf.py  test_application.py  test_background.py  test_concurrency.py  test_concurrency_stress.py  test_concurrent_ratelimiter.py  test_cookie_security_fixes.py  test_cors.py  test_cors_security.py  test_crud.py  test_csrf.py  test_datastructures.py  test_exceptions.py  test_fileupload.py  test_gzip.py  test_headers_normalization.py  test_headers_regression.py  test_https_bypass_regression.py  test_httpsredirect.py  test_integration.py  test_ip_spoofing.py  test_ipv6_ratelimit.py  test_ipv6_trustedhost.py  test_logger.py  test_main.py  test_middleware.py  test_middleware_base.py  test_middleware_logic.py  test_middleware_proxy_headers.py  test_native_extension.py  test_native_integration.py  test_params.py  test_permissions_policy_validation.py  test_proxy_dos_fix.py  test_proxy_headers_extensions.py  test_ratelimiter.py  test_reload.py  (+42 more)
xyra/: __init__.py  __main__.py  application.py  background.py  concurrency.py  datastructures.py  exceptions.py  logger.py  params.py  request.py  response.py  routing.py  swagger.py  templating.py  utils.py  websockets.py
xyra/middleware/: __init__.py  base.py  cors.py  csrf.py  gzip.py  httpsredirect.py  proxy_headers.py  rate_limiter.py  security_headers.py  trustedhost.py
xyra/native/: CMakeLists.txt  bindings.cpp  c_api.cpp  c_api.h  cffi_build.py
xyra/native/xyra/: _libxyra.c
